--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -93,9 +93,7 @@ html {
 
 .card_one {
   grid-column: 1 / 2;
-  /* Pirmā kolonna */
   grid-row: 1 / 2;
-  /* Pirmā rinda */
   background-color: var(--card_main_color);
   background-size: cover;
   border-radius: 20px 0 0 0;
@@ -119,9 +117,7 @@ html {
 
 .card_two {
   grid-column: 1 / 2;
-  /* Pirmā kolonna */
   grid-row: 2 / 3;
-  /* Otrā rinda */
   background-color: var(--card_main_color);
   background-size: cover;
   border-radius: 0 0 0 20px;
@@ -145,9 +141,7 @@ html {
 
 .card_three {
   grid-column: 2 / 3;
-  /* Otrā kolonna */
   grid-row: 1 / 3;
-  /* Abas rindas (horizontāli izstiepta karte) */
   background-color: var(--card_main_color);
   background-size: cover;
   border: 1px solid #ddd;
@@ -158,9 +152,7 @@ html {
 
 .card_four {
   grid-column: 3 / 4;
-  /* Trešā kolonna */
   grid-row: 1 / 2;
-  /* Pirmā rinda */
   background-color: var(--card_main_color);
   background-size: cover;
   border: 1px solid #ddd;
@@ -183,9 +175,7 @@ html {
 
 .card_five {
   grid-column: 3 / 4;
-  /* Trešā kolonna */
   grid-row: 2 / 3;
-  /* Otrā rinda */
   background-color: var(--card_main_color);
   background-size: cover;
   border: 1px solid #ddd;
@@ -221,9 +211,6 @@ html {
 
 }
 
-
-
-/* ============== Large Screens (1024px - 1920px) ============= */
 @media only screen and (min-width: 1920px) and (max-width: 1920px) {
   body {
     width: 90%;
@@ -241,17 +228,17 @@ html {
   .second-content-container,
   .third-content-container,
   .fourth-content-container {
-
-    height: 600px; /* Mainīts, lai pielāgotos saturam */
-    padding: 40px;/* Pievienots papildus izsistēšanai no malas */
+    height: 600px; 
+    padding: 40px;
     background-size: cover;
   }
 
   .card_container {
-    top: 89%;
+    top: 90%;
     right: 5%;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, auto);
+    gap: 20px; /* Add some gap between the cards */
   }
 
   .card_one,
@@ -260,7 +247,12 @@ html {
   .card_four,
   .card_five,
   .card_six {
-    width: auto;
+    width: 300px; /* Set the desired width */
+    height: 400px; /* Set the desired height */
+    padding: 20px; /* Add padding for inner spacing */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add some shadow for a better look */
+    border-radius: 10px; /* Optional: Add rounded corners */
+    background-color: #f9f9f9; /* Optional: Set a background color */
   }
 
   .discount_icon {
